# mrgingham

./: .gitignore  CMakeLists.txt  ChESS.cc  ChESS.h  MrginghamJNI.cpp  MrginghamJNI.h  MrginghamJNI.java  README.md  find_blobs.cc  find_chessboard_corners.cc  find_grid.cc  generate_usage.py  main_test.cpp  mrgingham-from-image.cc  mrgingham-from-image_win.cc  mrgingham.cc  mrgingham.hh  mrgingham_pywrap.c  opencv_test.cc  windows_defines.h
.github/workflows/: cmake.yml
darwin/: exports.txt
linux/: exports.txt
python/: download_opencv.py
windows/: mrgingham.def
